[gd_scene load_steps=19 format=3 uid="uid://0g2j71sl5opa"]

[ext_resource type="Script" path="res://Player/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b087lisu8oi0n" path="res://Assets/big_sonar_clear.png" id="3_7he8c"]
[ext_resource type="FontFile" uid="uid://bjsklqs87cq87" path="res://digital-7.ttf" id="3_8i7cd"]
[ext_resource type="FontFile" path="res://Assets/atari.tres" id="3_x8n5w"]
[ext_resource type="PackedScene" uid="uid://1a43h7kkhteh" path="res://progress.tscn" id="4_5psr7"]
[ext_resource type="Texture2D" uid="uid://xefblgmegf52" path="res://icon.png" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(18, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vqdh3"]
radius = 16.0
height = 48.0

[sub_resource type="Shader" id="2"]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/waveforms

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result to godotshaders.com.
*/

shader_type canvas_item;
render_mode blend_premul_alpha;

uniform int lines = 80; // Amount of lines the waveform is build up of
uniform float amplitude : hint_range(0.0, 1.0) = 0.9; // Height of the wave
uniform float frequency : hint_range(0.0, 0.5) = 0.1; // Set a lower value for a smoother wave
uniform float intensity : hint_range(0.0, 1.0) = 0.75; // Lower values creates gaps in the wave while higher make the wave more solid
uniform float line_sharpness : hint_range(0.0, 1.0) = 0.5; // Fuzzy edges on each line
uniform float line_size : hint_range(0.0, 1.0) = 0.8; // Thickness of the lines
uniform float fade : hint_range(0.0, 0.5) = 0.1; // Blurres the top and bottom of the lines
uniform float rest_size : hint_range(-2., 2.) = -0.2; // The size of the lines when the line is not animating, i.e at value 0. Tweak if Fade is used.
uniform float edge : hint_range(0.0, 0.5) = 0.05; // How close to the edges should the animation beginn
uniform float speed = 0.5; // Speed of wave animation
uniform vec4 color : source_color = vec4(.8, 0.25, 0.5, 1.0); // Color of wave
uniform bool dot_matrix = false; 
uniform int dot_matriz_size = 80;

uniform bool speech_sim = true; // Toggle to simulate speach. Will create a more erratic movement in the wave
uniform float speech_intensity : hint_range(0.0, 2.0) = 0.8; // How fast will the speech movement be
uniform float progress : hint_range(0.0, 1.0) = 1.0; // Use to turn the animation on and off from outside the shader. 0 - off, 1 - on. Can animate values between which will shrink the wave.

float random(vec2 uv) {
	return fract(sin(dot(uv.xy,
	vec2(12.9898,78.233))) * 43758.5453123);
}

float noise(vec2 uv) {
	vec2 uv_index = floor(uv);
	vec2 uv_fract = fract(uv);

	// Four corners in 2D of a tile
	float a = random(uv_index);
	float b = random(uv_index + vec2(1.0, 0.0));
	float c = random(uv_index + vec2(0.0, 1.0));
	float d = random(uv_index + vec2(1.0, 1.0));

	vec2 blur = smoothstep(0.0, 1.0, uv_fract);

	return mix(a, b, blur.x) +
				(c - a) * blur.y * (1.0 - blur.x) +
				(d - b) * blur.x * blur.y;
}

float fbm(vec2 uv) {
	int octaves = 4;
	float amp = 0.5;
	float freq = 4.;
	float value = 0.0;
	
	for(int i = 0; i < octaves; i++) {
		value += amp * noise(freq * uv - 0.5);
		amp *= 0.6;
		freq *= 2.;
	}
	return value;
}


void fragment()
{
	// Some initialising
	float time = TIME;
	vec4 c = vec4(vec3(0.0), 1.0);
	float f_columns = float(lines);
	
	// Make some distance to the edges before the animation starts
	float cutoff = smoothstep(0.0, edge, (round ((UV.x) * (f_columns) ) / f_columns) );
	cutoff *= 1. - smoothstep(1.-edge, 1.0, (round ((UV.x) * (f_columns) ) / f_columns) );

	// Speech simulation setup
	float ss = 1.0;
	if (speech_sim == true){
		ss = fbm(vec2(1.0, time * speed * 1.3) * speech_intensity) * 1.5;
	}
	
	// Create the noise that controlls the animation
	float noise = fbm(vec2( round( (UV.x) * f_columns ) * frequency, time * speed) ) * ss * progress;
	noise *= cutoff; // Apply edge cutoff
	
	// Make wave values based on the noise
	float wave = smoothstep(1.-intensity, 1.0, noise) * amplitude;
	wave = wave + (rest_size * 0.2);
	
	// Create the lines
	float line = abs( sin(( f_columns * 3.1416 * UV.x) + 1.5) );
	line = smoothstep(1.-line_size, (1.-line_size) + (1.-line_sharpness), line);
	
	// Simulate dot_matrix
	if (dot_matrix){
		float dm = abs( sin(( float(dot_matriz_size) * 3.1416 * UV.y) + 1.5) );
		dm = smoothstep(1.-line_size, (1.-line_size) + (1.-line_sharpness), dm);
		line *= dm;
	}
	
	// Duplicate mask on top an bottom and apply to line
	float mask = 1.0 - smoothstep(wave, wave + fade, abs(UV.y - 0.5) * 2.);
	line *= mask;
	
	c = vec4(line) * color;
	
	COLOR = c;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eb03p"]
shader = SubResource("2")
shader_parameter/lines = 250
shader_parameter/amplitude = 0.683
shader_parameter/frequency = 0.1
shader_parameter/intensity = 0.75
shader_parameter/line_sharpness = 1.0
shader_parameter/line_size = 1.0
shader_parameter/fade = 0.0
shader_parameter/rest_size = 0.0
shader_parameter/edge = 0.05
shader_parameter/speed = 0.5
shader_parameter/color = Color(0, 1, 0, 1)
shader_parameter/dot_matrix = false
shader_parameter/dot_matriz_size = 80
shader_parameter/speech_sim = false
shader_parameter/speech_intensity = 0.8
shader_parameter/progress = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sluex"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2jqa"]

[sub_resource type="Gradient" id="Gradient_fedua"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tphwv"]
gradient = SubResource("Gradient_fedua")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_y02ef"]
interpolation_mode = 1
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ulw5y"]
gradient = SubResource("Gradient_y02ef")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 0.5)

[sub_resource type="Shader" id="4"]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/VHS-and-CRT-monitor-effect

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result to godotshaders.com.
*/

shader_type canvas_item;

//*** IMPORTANT! ***/ 
// - If you are using this shader to affect the node it is applied to set 'overlay' to false (unchecked in the instepctor).
// - If you are using this shader as an overlay, and want the shader to affect the nodes below in the Scene hierarchy,
//   set 'overlay' to true (checked in the inspector).
// On Mac there is potentially a bug causing this to not work properly. If that is the case and you want to use the shader as an overlay
// change all \"overlay ? SCREEN_TEXTURE : TEXTURE\" to only \"SCREEN_TEXTURE\" on lines 129-140, and \"vec2 uv = overlay ? warp(SCREEN_UV) : warp(UV);\"
// to \"vec2 uv = warp(SCREEN_UV);\" on line 98.
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;
uniform bool overlay = false;

uniform float scanlines_opacity : hint_range(0.0, 1.0) = 0.4;
uniform float scanlines_width : hint_range(0.0, 0.5) = 0.25;
uniform float grille_opacity : hint_range(0.0, 1.0) = 0.3;
uniform vec2 resolution = vec2(640.0, 480.0); // Set the number of rows and columns the texture will be divided in. Scanlines and grille will make a square based on these values

uniform bool pixelate = true; // Fill each square (\"pixel\") with a sampled color, creating a pixel look and a more accurate representation of how a CRT monitor would work.

uniform bool roll = true;
uniform float roll_speed = 8.0; // Positive values are down, negative are up
uniform float roll_size : hint_range(0.0, 100.0) = 15.0;
uniform float roll_variation : hint_range(0.1, 5.0) = 1.8; // This valie is not an exact science. You have to play around with the value to find a look you like. How this works is explained in the code below.
uniform float distort_intensity : hint_range(0.0, 0.2) = 0.05; // The distortion created by the rolling effect.

uniform float noise_opacity : hint_range(0.0, 1.0) = 0.4;
uniform float noise_speed = 5.0; // There is a movement in the noise pattern that can be hard to see first. This sets the speed of that movement.

uniform float static_noise_intensity : hint_range(0.0, 1.0) = 0.06;

uniform float aberration : hint_range(-1.0, 1.0) = 0.03; // Chromatic aberration, a distortion on each color channel.
uniform float brightness = 1.4; // When adding scanline gaps and grille the image can get very dark. Brightness tries to compensate for that.
uniform bool discolor = true; // Add a discolor effect simulating a VHS

uniform float warp_amount :hint_range(0.0, 5.0) = 1.0; // Warp the texture edges simulating the curved glass of a CRT monitor or old TV.
uniform bool clip_warp = false;

uniform float vignette_intensity = 0.4; // Size of the vignette, how far towards the middle it should go.
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;

// Used by the noise functin to generate a pseudo random value between 0.0 and 1.0
vec2 random(vec2 uv){
    uv = vec2( dot(uv, vec2(127.1,311.7) ),
               dot(uv, vec2(269.5,183.3) ) );
    return -1.0 + 2.0 * fract(sin(uv) * 43758.5453123);
}

// Generate a Perlin noise used by the distortion effects
float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);

    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix( mix( dot( random(uv_index + vec2(0.0,0.0) ), uv_fract - vec2(0.0,0.0) ),
                     dot( random(uv_index + vec2(1.0,0.0) ), uv_fract - vec2(1.0,0.0) ), blur.x),
                mix( dot( random(uv_index + vec2(0.0,1.0) ), uv_fract - vec2(0.0,1.0) ),
                     dot( random(uv_index + vec2(1.0,1.0) ), uv_fract - vec2(1.0,1.0) ), blur.x), blur.y) * 0.5 + 0.5;
}

// Takes in the UV and warps the edges, creating the spherized effect
vec2 warp(vec2 uv){
	vec2 delta = uv - 0.5;
	float delta2 = dot(delta.xy, delta.xy);
	float delta4 = delta2 * delta2;
	float delta_offset = delta4 * warp_amount;
	
	return uv + delta * delta_offset;
}

// Adds a black border to hide stretched pixel created by the warp effect
float border (vec2 uv){
	float radius = min(warp_amount, 0.08);
	radius = max(min(min(abs(radius * 2.0), abs(1.0)), abs(1.0)), 1e-5);
	vec2 abs_uv = abs(uv * 2.0 - 1.0) - vec2(1.0, 1.0) + radius;
	float dist = length(max(vec2(0.0), abs_uv)) / radius;
	float square = smoothstep(0.96, 1.0, dist);
	return clamp(1.0 - square, 0.0, 1.0);
}

// Adds a vignette shadow to the edges of the image
float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment()
{
	vec2 uv = overlay ? warp(SCREEN_UV) : warp(UV); // Warp the uv. uv will be used in most cases instead of UV to keep the warping
	vec2 text_uv = uv;
	vec2 roll_uv = vec2(0.0);
	float time = roll ? TIME : 0.0;
	

	// Pixelate the texture based on the given resolution.
	if (pixelate)
	{
		text_uv = ceil(uv * resolution) / resolution;
	}
	
	// Create the rolling effect. We need roll_line a bit later to make the noise effect.
	// That is why this runs if roll is true OR noise_opacity is over 0.
	float roll_line = 0.0;
	if (roll || noise_opacity > 0.0)
	{
		// Create the areas/lines where the texture will be distorted.
		roll_line = smoothstep(0.3, 0.9, sin(uv.y * roll_size - (time * roll_speed) ) );
		// Create more lines of a different size and apply to the first set of lines. This creates a bit of variation.
		roll_line *= roll_line * smoothstep(0.3, 0.9, sin(uv.y * roll_size * roll_variation - (time * roll_speed * roll_variation) ) );
		// Distort the UV where where the lines are
		roll_uv = vec2(( roll_line * distort_intensity * (1.-UV.x)), 0.0);
	}
	
	vec4 text;
	if (roll)
	{
		// If roll is true distort the texture with roll_uv. The texture is split up into RGB to 
		// make some chromatic aberration. We apply the aberration to the red and green channels accorging to the aberration parameter
		// and intensify it a bit in the roll distortion.
		text.r = texture(SCREEN_TEXTURE, text_uv + roll_uv * 0.8 + vec2(aberration, 0.0) * .1).r;
		text.g = texture(SCREEN_TEXTURE, text_uv + roll_uv * 1.2 - vec2(aberration, 0.0) * .1 ).g;
		text.b = texture(SCREEN_TEXTURE, text_uv + roll_uv).b;
		text.a = 1.0;
	}
	else
	{
		// If roll is false only apply the aberration without any distorion. The aberration values are very small so the .1 is only 
		// to make the slider in the Inspector less sensitive.
		text.r = texture(SCREEN_TEXTURE, text_uv + vec2(aberration, 0.0) * .1).r;
		text.g = texture(SCREEN_TEXTURE, text_uv - vec2(aberration, 0.0) * .1).g;
		text.b = texture(SCREEN_TEXTURE, text_uv).b;
		text.a = 1.0;
	}
	
	float r = text.r;
	float g = text.g;
	float b = text.b;
	
	uv = warp(UV);
	
	// CRT monitors don't have pixels but groups of red, green and blue dots or lines, called grille. We isolate the texture's color channels 
	// and divide it up in 3 offsetted lines to show the red, green and blue colors next to each other, with a small black gap between.
	if (grille_opacity > 0.0){
		
		float g_r = smoothstep(0.85, 0.95, abs(sin(uv.x * (resolution.x * 3.14159265))));
		r = mix(r, r * g_r, grille_opacity);
		
		float g_g = smoothstep(0.85, 0.95, abs(sin(1.05 + uv.x * (resolution.x * 3.14159265))));
		g = mix(g, g * g_g, grille_opacity);
		
		float b_b = smoothstep(0.85, 0.95, abs(sin(2.1 + uv.x * (resolution.x * 3.14159265))));
		b = mix(b, b * b_b, grille_opacity);
		
	}
	
	// Apply the grille to the texture's color channels and apply Brightness. Since the grille and the scanlines (below) make the image very dark you
	// can compensate by increasing the brightness.
	text.r = clamp(r * brightness, 0.0, 1.0);
	text.g = clamp(g * brightness, 0.0, 1.0);
	text.b = clamp(b * brightness, 0.0, 1.0);
	
	// Scanlines are the horizontal lines that make up the image on a CRT monitor. 
	// Here we are actual setting the black gap between each line, which I guess is not the right definition of the word, but you get the idea  
	float scanlines = 0.5;
	if (scanlines_opacity > 0.0)
	{
		// Same technique as above, create lines with sine and applying it to the texture. Smoothstep to allow setting the line size.
		scanlines = smoothstep(scanlines_width, scanlines_width + 0.5, abs(sin(uv.y * (resolution.y * 3.14159265))));
		text.rgb = mix(text.rgb, text.rgb * vec3(scanlines), scanlines_opacity);
	}
	
	// Apply the banded noise.
	if (noise_opacity > 0.0)
	{
		// Generate a noise pattern that is very stretched horizontally, and animate it with noise_speed
		float noise = smoothstep(0.4, 0.5, noise(uv * vec2(2.0, 200.0) + vec2(10.0, (TIME * (noise_speed))) ) );
		
		// We use roll_line (set above) to define how big the noise should be vertically (multiplying cuts off all black parts).
		// We also add in some basic noise with random() to break up the noise pattern above. The noise is sized according to 
		// the resolution value set in the inspector. If you don't like this look you can 
		// change \"ceil(uv * resolution) / resolution\" to only \"uv\" to make it less pixelated. Or multiply resolution with som value
		// greater than 1.0 to make them smaller.
		roll_line *= noise * scanlines * clamp(random((ceil(uv * resolution) / resolution) + vec2(TIME * 0.8, 0.0)).x + 0.8, 0.0, 1.0);
		// Add it to the texture based on noise_opacity
		text.rgb = clamp(mix(text.rgb, text.rgb + roll_line, noise_opacity), vec3(0.0), vec3(1.0));
	}
	
	// Apply static noise by generating it over the whole screen in the same way as above
	if (static_noise_intensity > 0.0)
	{
		text.rgb += clamp(random((ceil(uv * resolution) / resolution) + fract(TIME)).x, 0.0, 1.0) * static_noise_intensity;
	}
	
	// Apply a black border to hide imperfections caused by the warping.
	// Also apply the vignette
	text.rgb *= border(uv);
	text.rgb *= vignette(uv);
	// Hides the black border and make that area transparent. Good if you want to add the the texture on top an image of a TV or monitor.
	if (clip_warp)
	{
		text.a = border(uv);
	}
	
	// Apply discoloration to get a VHS look (lower saturation and higher contrast)
	// You can play with the values below or expose them in the Inspector.
	float saturation = 0.5;
	float contrast = 1.2;
	if (discolor)
	{
		// Saturation
		vec3 greyscale = vec3(text.r + text.g + text.b) / 3.;
		text.rgb = mix(text.rgb, greyscale, saturation);
		
		// Contrast
		float midpoint = pow(0.5, 2.2);
		text.rgb = (text.rgb - vec3(midpoint)) * contrast + midpoint;
	}
	
	COLOR = text;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_41q2f"]
shader = SubResource("4")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.136
shader_parameter/scanlines_width = 0.028
shader_parameter/grille_opacity = 0.358
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 5.0
shader_parameter/roll_size = 8.396
shader_parameter/roll_variation = 5.0
shader_parameter/distort_intensity = 0.002
shader_parameter/noise_opacity = 0.126
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.088
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.987
shader_parameter/vignette_opacity = 0.538

[node name="Player" type="CharacterBody2D" groups=["Player"]]
rotation = -1.5708
script = ExtResource("2")

[node name="Collision" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
shape = SubResource("1")

[node name="icon" type="Sprite2D" parent="Collision"]
rotation = 1.57079
scale = Vector2(0.2, 0.6)
texture = ExtResource("6")

[node name="Rays" type="Node2D" parent="."]

[node name="ray" type="RayCast2D" parent="Rays"]

[node name="ray2" type="RayCast2D" parent="Rays"]
rotation = 3.14159

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Short_Scan" type="Node2D" parent="."]

[node name="N" type="RayCast2D" parent="Short_Scan"]
rotation = -1.57079
collision_mask = 2

[node name="S" type="RayCast2D" parent="Short_Scan"]
rotation = 1.57079
collision_mask = 2

[node name="E" type="RayCast2D" parent="Short_Scan"]
collision_mask = 2

[node name="W" type="RayCast2D" parent="Short_Scan"]
rotation = 3.14159
collision_mask = 2

[node name="NE" type="RayCast2D" parent="Short_Scan"]
rotation = -0.785397
collision_mask = 2

[node name="NW" type="RayCast2D" parent="Short_Scan"]
rotation = -2.35619
collision_mask = 2

[node name="SE" type="RayCast2D" parent="Short_Scan"]
rotation = 0.785393
collision_mask = 2

[node name="SW" type="RayCast2D" parent="Short_Scan"]
rotation = 2.35619
collision_mask = 2

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_vqdh3")

[node name="Screen" type="CanvasLayer" parent="."]

[node name="BG_Color" type="ColorRect" parent="Screen"]
offset_right = 960.0
offset_bottom = 536.0
color = Color(0.109804, 0.188235, 0.0509804, 1)
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Screen"]
offset_left = 576.0
offset_top = 64.0
offset_right = 898.0
offset_bottom = 425.0
theme_override_fonts/normal_font = ExtResource("3_x8n5w")
text = "There is nothing on the horizon"

[node name="big_sonar_clear" type="Sprite2D" parent="Screen"]
position = Vector2(32, -8)
texture = ExtResource("3_7he8c")
centered = false

[node name="ScanLine" type="Line2D" parent="Screen"]
position = Vector2(288, 248)
rotation = 1.57079
points = PackedVector2Array(-0.000244141, 192, 0, 0, 0.000259399, -192)
width = 5.0
default_color = Color(0, 1, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Sub_Icon" type="Sprite2D" parent="Screen"]
modulate = Color(0, 0, 0, 1)
position = Vector2(288, 248)
scale = Vector2(0.194011, 0.582032)
texture = ExtResource("6")

[node name="Front" type="Sprite2D" parent="Screen/Sub_Icon"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-0.000488281, -27.49)
rotation = -3.14159
scale = Vector2(0.381478, 0.244028)
texture = ExtResource("6")

[node name="Back" type="Sprite2D" parent="Screen/Sub_Icon"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 27.4899)
scale = Vector2(1.41235, 0.175303)
texture = ExtResource("6")

[node name="Marker2D" type="Marker2D" parent="Screen"]
position = Vector2(288, 248)

[node name="wave" type="ColorRect" parent="Screen"]
material = SubResource("ShaderMaterial_eb03p")
offset_top = 496.0
offset_right = 960.0
offset_bottom = 536.0

[node name="Gear_Slider" type="VSlider" parent="Screen"]
offset_top = 16.0
offset_right = 56.0
offset_bottom = 504.0
theme_override_constants/grabber_offset = 10
theme_override_styles/slider = SubResource("StyleBoxEmpty_sluex")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_v2jqa")
min_value = -2.0
max_value = 2.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="Screen"]
offset_left = 896.0
offset_top = 448.0
offset_right = 951.0
offset_bottom = 484.0
theme_override_colors/font_color = Color(0.560784, 0.752941, 0.972549, 1)
theme_override_colors/font_outline_color = Color(0.847059, 0.901961, 0.972549, 0.396078)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_8i7cd")
theme_override_font_sizes/font_size = 32
text = "12:22"

[node name="TextureProgressBar" type="TextureProgressBar" parent="Screen"]
editor_description = "value: 25-75 for the visuals"
offset_left = 768.0
offset_top = 384.0
offset_right = 832.0
offset_bottom = 448.0
rotation = 3.14159
scale = Vector2(2, 2)
value = 61.0
fill_mode = 4
texture_under = SubResource("GradientTexture2D_tphwv")
texture_progress = SubResource("GradientTexture2D_ulw5y")
radial_center_offset = Vector2(0, -32)

[node name="TV_Style" type="ColorRect" parent="Screen"]
material = SubResource("ShaderMaterial_41q2f")
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Progress" parent="." instance=ExtResource("4_5psr7")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
